--- a/node-server/package.json
+++ b/node-server/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "4.14.0"
+    "express": "4.14.0",
+    "socket.io": "^1.7.3"
   },
-   "scripts": {
+  "scripts": {
     "start": "node server.js"
   }
 }
