--- a/node-server/package.json
+++ b/node-server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "4.14.0",
+    "serialport": "^4.0.7",
     "socket.io": "^1.7.3"
   },
   "scripts": {
